self-signed-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rayserve-demo-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - my-self-signed-domain.com
    secretName: self-signed-tls
  rules:
  - host: my-self-signed-domain.com
    http:
      paths:
      - backend:
          service:
            name: hello-world-serve-svc
            port:
              number: 8000
        path: /
        pathType: Prefix
